Actualizados enlaces a las diapositivas

--- a/Modulo_2/Clases/0724/Diapositivas_Grabaciones_Clases_0724.ipynb
+++ b/Modulo_2/Clases/0724/Diapositivas_Grabaciones_Clases_0724.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP34coXPG6FHlBNH8YqWMf8",
+      "authorship_tag": "ABX9TyMoRHn2GsPnkt/yPT0JqR65",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/txusser/Master_IA_Sanidad/blob/main/Modulo_2/Clases/0724/Diapositivas_Grabaciones_Clases_0724.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/CEMPAplicaciones/MIA/blob/main/Modulo_2/Clases/0724/Diapositivas_Grabaciones_Clases_0724.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -94,7 +94,7 @@
       "source": [
         "## Clase 2.5 - S15\n",
         "\n",
-        "[Introducción a Python]\n"
+        "[Introducción a Python](https://drive.google.com/file/d/1RSyRMYvuLhfl26gwphE7qmouJx97Ip6i/view?usp=sharing)\n"
       ],
       "metadata": {
         "id": "zIVXdNZB1-Ux"
@@ -105,7 +105,7 @@
       "source": [
         "## Clase 2.6 - S16\n",
         "\n",
-        "[Introducción a Python (Continuación)]"
+        "[Introducción a Python (Continuación)](https://drive.google.com/file/d/1OTh_97ns0ldItmSavHNaMQ4i90F3C3vG/view?usp=sharing)"
       ],
       "metadata": {
         "id": "V4U47wsN2MIX"
@@ -116,7 +116,7 @@
       "source": [
         "## Clase 2.7 - S17\n",
         "\n",
-        "[Orientación a objetos]"
+        "[Orientación a objetos](https://drive.google.com/file/d/1lxBmBwdpakWjj6RJjydh0NkWiEh4T8FV/view?usp=sharing)"
       ],
       "metadata": {
         "id": "sghmcU0l2X1_"
@@ -127,7 +127,7 @@
       "source": [
         "## Clase 2.8 - S18\n",
         "\n",
-        "[Librerias Ciencia de Datos Numpy Pandas]"
+        "[Librerias Ciencia de Datos Numpy Pandas](https://drive.google.com/file/d/1b6yI40M-PEWoxQHz-o5e8MffRdn-O6x5/view?usp=sharing)"
       ],
       "metadata": {
         "id": "KNc7SkIcBd4w"
@@ -138,7 +138,7 @@
       "source": [
         "## Clase 2.9 - S19\n",
         "\n",
-        "[Introducción a la IA en Python]\n"
+        "[Introducción a la IA en Python](https://drive.google.com/file/d/1Rl2xlKgnczoeowiBxbeCyJKVslLex5Wd/view?usp=sharing)\n"
       ],
       "metadata": {
         "id": "HBnltZ8dBrYj"
