--- a/Modulo_2/Clases/0724/Diapositivas_Grabaciones_Clases_0724.ipynb
+++ b/Modulo_2/Clases/0724/Diapositivas_Grabaciones_Clases_0724.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoRHn2GsPnkt/yPT0JqR65",
+      "authorship_tag": "ABX9TyNQswbI2DmwOmBvjj+ioZgW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,7 +149,7 @@
       "source": [
         "## Clase 2.10 - S20\n",
         "\n",
-        "[Análisis de datos en Python]"
+        "[Análisis de datos en Python](https://drive.google.com/file/d/1gqxS4LOqxLXsX27WvOCdNvUFxMdJTFpW/view?usp=sharing)"
       ],
       "metadata": {
         "id": "-6qQkB_JB47o"
@@ -160,7 +160,7 @@
       "source": [
         "## Clase 2.11 - S21\n",
         "\n",
-        "[Estructuración de datos]"
+        "[Estructuración de datos](https://drive.google.com/file/d/1-fBLIVtgNiA7U0shneLDT6Nl1BtsB3w_/view?usp=sharing)"
       ],
       "metadata": {
         "id": "Q0B1mj6bCA_W"
