--- a/Modulo_2/Clases/0724/Diapositivas_Grabaciones_Clases_0724.ipynb
+++ b/Modulo_2/Clases/0724/Diapositivas_Grabaciones_Clases_0724.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQswbI2DmwOmBvjj+ioZgW",
+      "authorship_tag": "ABX9TyPLQhrm+AqzpiUp1UAJr6Gg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,7 +171,7 @@
       "source": [
         "## Clase 2.12 - S22\n",
         "\n",
-        "[Machine Learning y Deep Learning en Python]"
+        "[Machine Learning y Deep Learning en Python](https://drive.google.com/file/d/1mvyFxWKJ-oQId8h4HC9lD86pttpIn8uE/view?usp=sharing)\n"
       ],
       "metadata": {
         "id": "vb0GRIZiCD_i"
@@ -182,7 +182,7 @@
       "source": [
         "## Trabajo Fin de Módulo - S23\n",
         "\n",
-        "[Comentarios e indicaciones]"
+        "[Comentarios e indicaciones](https://drive.google.com/file/d/1q0M1VfOhGH7ouMbTf1hn_pM6A8jnCYFF/view?usp=sharing)"
       ],
       "metadata": {
         "id": "AbcGY_1PCFzl"
