--- a/Modulo_2/MIA_TFM2_INICIALES_Proyecto.ipynb
+++ b/Modulo_2/MIA_TFM2_INICIALES_Proyecto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNacujMCtpWXxfgGU7+UvCW",
+      "authorship_tag": "ABX9TyPigvf1xEhpDSK+oXV/Mixz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -314,7 +314,7 @@
       "source": [
         "## Comentarios - Bloque 3\n",
         "\n",
-        "Ver ejemplos en las diapositvas de la S21"
+        "Ver ejemplos en las [diapositvas de la S21](https://drive.google.com/file/d/1-fBLIVtgNiA7U0shneLDT6Nl1BtsB3w_/view) y en el cuaderno de ejercicios [2_3_4_Modelado_y_evaluación_de_resultado](https://github.com/CEMPAplicaciones/MIA/blob/main/Modulo_2/2_3_4_Modelado_y_evaluaci%C3%B3n_de_resultados.ipynb)"
       ],
       "metadata": {
         "id": "fB8DdQTILwZM"
