--- a/Modulo_2/MIA_TFM2_INICIALES_Proyecto.ipynb
+++ b/Modulo_2/MIA_TFM2_INICIALES_Proyecto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPigvf1xEhpDSK+oXV/Mixz",
+      "authorship_tag": "ABX9TyMJK38W1ZhVaDF/MPkWkQCE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -159,26 +159,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Código de trabajo"
-      ],
-      "metadata": {
-        "id": "pIcbxzKXRpXy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 4. Realiza un análisis básico de selección de características siguiendo alguna de las técnicas vistas a lo largo del módulo que te permita obtener una submuestra depurada del dataset original.\n"
-      ],
-      "metadata": {
-        "id": "pLHMZZXI303V"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Tareas de imputación"
       ],
       "metadata": {
@@ -212,28 +192,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Comentarios - Bloque 2"
+        "## 4. Realiza un análisis básico de selección de características siguiendo alguna de las técnicas vistas a lo largo del módulo que te permita obtener una submuestra depurada del dataset original.\n"
       ],
       "metadata": {
-        "id": "o-_2ZjGS4GY6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 5. Partiendo de esta submuestra final, genera los grupos de entrenamiento y validación e imprime pos pantalla alguna características del mismo.\n"
-      ],
-      "metadata": {
-        "id": "Znag5SBE4Bd6"
+        "id": "pLHMZZXI303V"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Selección de características"
+        "# Código de trabajo"
       ],
       "metadata": {
-        "id": "9qLf-Oie4DXM"
+        "id": "pIcbxzKXRpXy"
       },
       "execution_count": null,
       "outputs": []
@@ -252,6 +223,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Comentarios - Bloque 2"
+      ],
+      "metadata": {
+        "id": "o-_2ZjGS4GY6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Bloque 3**"
       ],
       "metadata": {
@@ -261,7 +241,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6. Partiendo de esta submuestra final, genera los grupos de entrenamiento y validación e imprime pos pantalla alguna características del mismo."
+        "## 5. Partiendo de esta submuestra final, genera los grupos de entrenamiento y validación e imprime pos pantalla alguna características del mismo.\n"
+      ],
+      "metadata": {
+        "id": "Znag5SBE4Bd6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creamos los train, test splits de los datos depurados"
+      ],
+      "metadata": {
+        "id": "9qLf-Oie4DXM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6. Instancia el modelo Scikit-learn de tu elección y aplícalo sobre los datos seleccionados para el entrenamiento."
       ],
       "metadata": {
         "id": "M5K0LfDXKMTv"
@@ -270,7 +270,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Creamos los train, test splits de los datos depurados"
+        "# Instantiamos y entrenamos el modelo (o modelos) de nuestra elección (adecuado al problema)"
       ],
       "metadata": {
         "id": "p4Y03vvzLLFX"
